# hn-fdw

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  SPEC.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
docker/initdb/: 10-hn-fdw.sh
src/hn_fdw/: __init__.py  __main__.py  bootstrap.py  catalog.py  cli.py  config.py  ddl.py
tests/: test_catalog.py  test_ddl.py
