[project]
name = "hn-fdw"
version = "0.1.0"
description = "Query the open-index/hacker-news Parquet dataset from Postgres without copying any data."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "hn-fdw contributors" }]
keywords = ["postgres", "duckdb", "fdw", "hacker-news", "parquet", "huggingface"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
]
dependencies = [
    "typer>=0.24.1",
    "rich>=14.3.3",
    "huggingface-hub>=1.9.2",
    "psycopg[binary]>=3.3.3",
    "duckdb>=1.5.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
]

[project.scripts]
hn-fdw = "hn_fdw.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hn_fdw"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
